@@ -5,6 +5,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.1
 
 	- Documentation updates.
+	- cupsLangDefault() did not attempt to return a language that
+	  was supported by the calling application.
 	- If a remote printer stopped while a job was being sent, the
 	  local queue would also get stopped and the job re-queued,
 	  resulting in duplicate prints in some cases.
